# MyTorrents

./: CMakeLists.txt  README.md  bencode.cpp
include/: bencode.hpp  torrentfile.hpp
src/: main.cpp  torrentfile.cpp
